feat: adds new exoplayer (2.18.1) and mux (2.9.1)