@@ -8,6 +8,8 @@ import android.content.Context;
 import android.graphics.Point;
 import android.os.Build;
 import android.util.LongSparseArray;
+
+import com.mux.stats.sdk.core.model.CustomerData;
 import com.mux.stats.sdk.core.model.CustomerPlayerData;
 import com.mux.stats.sdk.core.model.CustomerVideoData;
 import com.mux.stats.sdk.muxstats.MuxStatsExoPlayer;
@@ -177,6 +179,8 @@ public class VideoPlayerPlugin implements FlutterPlugin, VideoPlayerApi {
     CustomerPlayerData playerData = new CustomerPlayerData();
     CustomerVideoData videoData = new CustomerVideoData();
 
+    CustomerData customerData = new CustomerData();
+
     playerData.setEnvironmentKey(arg.getEnvKey());
     playerData.setPlayerName(arg.getPlayerName());
     videoData.setVideoSourceUrl(videoSource);
@@ -235,8 +239,11 @@ public class VideoPlayerPlugin implements FlutterPlugin, VideoPlayerApi {
     if (arg.getVideoDuration() != null)
       videoData.setVideoDuration(castVideoDuration(arg.getVideoDuration()));
 
+    customerData.setCustomerPlayerData(playerData);
+    customerData.setCustomerVideoData(videoData);
+
      muxStatsExoPlayer = new MuxStatsExoPlayer(flutterState.applicationContext, player.exoPlayer,
-        arg.getPlayerName(), playerData, videoData);
+        arg.getEnvKey(), customerData);
   }
 
   public void dispose(TextureMessage arg) {
@@ -301,11 +308,11 @@ public class VideoPlayerPlugin implements FlutterPlugin, VideoPlayerApi {
 
     // The type of object that comes in is dependant on the size of the value.
     if (value instanceof Integer) {
-      videoDuration = new Long((Integer) value);
+      videoDuration = Long.valueOf((Integer) value);
     } else if (value instanceof Short) {
-      videoDuration = new Long((Short) value);
+      videoDuration = Long.valueOf((Short) value);
     } else if (value instanceof Byte) {
-      videoDuration = new Long((Byte) value);
+      videoDuration = Long.valueOf((Byte) value);
     } else {
       videoDuration = (Long) value;
     }
